2003-02-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/385:
	* lib/depcomp (makedepend): Strip any libtool call, before
	running makedepends.
	* tests/depcomp4.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Reported by Jeff Squyres.

	Related to PR automake/385:
	* lib/depcomp (dashmstdout): Do not use `-o /dev/null', or gcc will
	write dependencies to /dev/null.  `-o /dev/null' was added
	on 2002-06-13 just because I tried to replace `-o foo.o' by something
	else and didn't thought about removing it entirely.
	* tests/depcomp3.test: New file.
	* tests/Makefile.am (TESTS): Add it.

	* automake.in (BEGIN): Override $ENV{'SHELL'} with ./configure's
	SHELL for DJGPP.
	Suggested by Richard Dawe.

2003-02-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): New nodes.

2003-02-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_files): Don't complain that
	AM_INIT_AUTOMAKE comes from an old version if it was not found.

2003-02-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (am_install_var): Simplify filtering of
	variable_loc_and_value_as_list_recursive's output.

2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
	indexes of header files so we create stamp files with
	the right numbers when config.status is run on some headers.
	* tests/stamph2.test: Check for this.
	Reported by Sander Niemeijer.

2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (vars_scanned): Move near traverse_variable_recursively.
	(traverse_variable_recursively,
	traverse_variable_recursively_worker): Accept a $COND_FILTER argument
	to filter out conditions during recursion.  Don't recurse into
	undefined variables.  Don't pass empty results to &FUN_COLLECT.
	(value_to_list): Remove, was used by
	variable_value_as_list_recursive_worker only.
	(variable_value_as_list_recursive_worker): Rewrite using